# api-myflix

myflix/: README.md  myflix.db  pyproject.toml
myflix/src/: server.py
myflix/src/infra/sqlalchemy/models/: models.py
myflix/src/infra/sqlalchemy/repositorios/: series.py
myflix/src/schemas/: schemas.py
